2004-11-26  Christophe Fergeau  <teuf@gnome.org>

	* update-mime-database.c: (parse_int_value), (match_offset): use 
	strtoul when reading an unsigned long, not strtol, fixes #1506

2004-11-26  Christophe Fergeau  <teuf@gnome.org>

	* update-mime-database.c: (parse_int_value): take value endianness
	into account when reading the "mask" tag, fixes #1507.

Tue Nov  9 01:52:52 2004  Jonathan Blandford  <jrb@redhat.com>

	* update-mime-database.c: Patch from Matthias Clasen to generate
	subclass and alias files.

	* shared-mime-info-spec.xml.in: update the spec to mention the
	subclasses and aliases files.

2004-11-04  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml:
	* freedesktop.org.xml.in: add magic for the audio/x-mpegurl mime-type

2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml:
	* freedesktop.org.xml.in: sync freedesktop.org.xml with
	freedesktop.org.xml.in, fix freedesktop.org.xml.in to make it valid
	XML

2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: Added application/mathematica, patch by Chris
	Maes <i-chris@wolfram.com>, fixes #870

2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: Added application/x-chm, patch by Loic
	Minier <lool+freedesktop@dooz.org>, fixes #794 

2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: Added application/x-pdf alias, fixes #560

2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: Added application/x-par2, patch by dob 
	<abusenospam@free.fr>, fixes #750

2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: Improve lotus 123 files magic pattern. Patch
	by Filip Van Raemdonck <mechanix@debian.org>, fix #1276.

Mon Nov  1 14:49:57 2004  Jonathan Blandford  <jrb@redhat.com>

	* MAINTAINERS: New file to highlight that I'm no longer the
	maintainer.

Mon Nov  1 14:47:02 2004  Jonathan Blandford  <jrb@redhat.com>
