@@ -779,6 +779,12 @@ command to generate the output files.
     </magic>
     <glob pattern="*.class"/>
   </mime-type>
+  <mime-type type="application/x-java-jnlp-file">
+    <sub-class-off type="text/xml"/>
+    <_comment>Java Network Launched Application</_comment>
+    <glob pattern="*.jnlp"/>
+    <match type="string" value="&lt;jnlp" offset="0:64"/>
+  </mime-type>
   <mime-type type="application/x-javascript">
     <sub-class-of type="text/plain"/>
     <_comment>Javascript program</_comment>
